--- a/FinalProject/app/src/free/res/values/strings.xml
+++ b/FinalProject/app/src/free/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="version">This is the FREE version</string>
+    <string name="app_name">Build it Bigger FREE</string>
+    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
 </resources>
