--- a/FinalProject/app/src/paid/res/values/strings.xml
+++ b/FinalProject/app/src/paid/res/values/strings.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="version">This is the PAID version</string>
+    <string name="app_name">Build it Bigger Paid</string>
 </resources>
